--- a/powerops.tex
+++ b/powerops.tex
@@ -966,7 +966,7 @@ execute at end picture={
     \node[fill=white, fill opacity=0.33, text opacity=1] (A) at ([shift={(225:0.75)}]Cj) {\scriptsize \(A\)};
 }]
 \spin \arrow{r}[description]{j} \arrow[very thick]{rd} & |[alias=glS]| \gl_1 \S \arrow{r} \arrow[very thick]{d} \arrow{rd}[description]{\gl_1 \eta_{KO_p}} & |[alias=Cj]| Cj \arrow{d} \\
-& \Susp^{-1} \Q/\Z \otimes \gl_1 KO_p \arrow{r} & |[alias=glKOp]| \gl_1 KO_p \arrow{r} & \Q \otimes \gl_1 KO_p \arrow{r} & \Q/\Z \otimes \gl_1 KO_p.
+& \Susp^{-1} \Q/\S \otimes \gl_1 KO_p \arrow{r} & |[alias=glKOp]| \gl_1 KO_p \arrow{r} & \Q \otimes \gl_1 KO_p \arrow{r} & \Q/\S \otimes \gl_1 KO_p.
 \end{tikzcd}
 \end{center}
 There is a canonical bolded vertical lift of \(\gl_1 \eta_{KO_p}\) since \(\gl_1 \S\) is a torsion spectrum, and this precomposes with \(j\) to give the diagonal map.  Notice now that selecting a filler triangle \(A\) gives a commuting square with choice of homotopy and that \([\gl_1 \S, \Q \otimes \gl_1 KO_p] = 0\), and hence we would get a natural map (and natural homotopy) off of the homotopy cofibers:
@@ -981,7 +981,7 @@ execute at end picture={
     \node[fill=white, fill opacity=0.33, text opacity=1] (A) at ([shift={(225:0.75)}]Cj) {\scriptsize \(A\)};
 }]
 \spin \arrow{r}[description]{j} \arrow{rd} & |[alias=glS]| \gl_1 \S \arrow{r} \arrow{d} \arrow{rd}[description]{\gl_1 \eta_{KO_p}} & |[alias=Cj]| Cj \arrow[very thick]{d}[description]{B} \arrow{r} & b\spin \arrow{r} \arrow{rd} \arrow[very thick]{d}[description]{C}& b\gl_1 \S \arrow{d} \\
-& \Susp^{-1} \Q/\Z \otimes \gl_1 KO_p \arrow{r} & |[alias=glKOp]| \gl_1 KO_p \arrow{r} & \Q \otimes \gl_1 KO_p \arrow{r} & \Q/\Z \otimes \gl_1 KO_p,
+& \Susp^{-1} \Q/\S \otimes \gl_1 KO_p \arrow{r} & |[alias=glKOp]| \gl_1 KO_p \arrow{r} & \Q \otimes \gl_1 KO_p \arrow{r} & \Q/\S \otimes \gl_1 KO_p,
 \end{tikzcd}
 \end{center}
 where \(C\) is a map making the triangle it belongs to commute.  This all gives functions assigning \(A\) to \(B\) and \(A\) to \(C\) (and, in fact, the latter assignment factors through the former).
@@ -1044,7 +1044,7 @@ As a consequence, we have identifications \[\gl_1 \eta_{KO_p} \circ j \in [\spin
 
 We claim also that the kernel of the assignment \(A \mapsto C\) is easy to understand: two fillers \(A\) are related by an element of \([b\spin, \gl_1 KO_p]\), and their corresponding \(C\)s are related by the corresponding element of \([b\spin, \Q \otimes \gl_1 KO_p]\).  This set is rational, hence factors through the rationalization of \([b\spin, \gl_1 KO_p]\) where it must already be null, and hence it is a torsion element of \([b\spin, \gl_1 KO_p]\).  Meanwhile, the same argument as above identifies \[[b\spin, \gl_1 KO_p] = [KO_p, KO_p],\] which we mark as a second point where we would like to understand \(KO_p\)--operations.  If we were to find the group of degree-preserving \(KO_p\)--operations to be torsion-free, then the assignment \(A \mapsto C\) would be \emph{injective}.
 
-We would like to understand the behavior of \(C\) on homotopy based on some data about \(A\).  This serves two purposes: there is the necessary condition that the triangle formed by \(C\) and the canonical map \(b\spin \to \Q / \Z \otimes \gl_1 KO_p\) commute, and then also the composite \[b\spin \xrightarrow{C} \Q \otimes \gl_1 KO_p \to (\gl_1 (\Q \otimes KO_p))[1, \infty)\] describes the map into the adelic component.  In order to gain access to \(C\), first notice that we can postcompose \(B\) with the localization map off of \(\gl_1 KO_p\) as in \Cref{MainAHRDiagram}.\footnote{Importantly, and differently from what every source says, this isn't a map of cofiber sequences and so there is no commuting map with signature \(\widehat L_1 b\spin \to \Q \otimes \widehat L_1 \gl_1 KO_p\).}  This gives a new map \(B'\co KO_p \to KO_p\)---a third reason to understand \(KO_p\)--operations.
+We would like to understand the behavior of \(C\) on homotopy based on some data about \(A\).  This serves two purposes: there is the necessary condition that the triangle formed by \(C\) and the canonical map \(b\spin \to \Q / \S \otimes \gl_1 KO_p\) commute, and then also the composite \[b\spin \xrightarrow{C} \Q \otimes \gl_1 KO_p \to (\gl_1 (\Q \otimes KO_p))[1, \infty)\] describes the map into the adelic component.  In order to gain access to \(C\), first notice that we can postcompose \(B\) with the localization map off of \(\gl_1 KO_p\) as in \Cref{MainAHRDiagram}.\footnote{Importantly, and differently from what every source says, this isn't a map of cofiber sequences and so there is no commuting map with signature \(\widehat L_1 b\spin \to \Q \otimes \widehat L_1 \gl_1 KO_p\).}  This gives a new map \(B'\co KO_p \to KO_p\)---a third reason to understand \(KO_p\)--operations.
 
 We are now in a position to compute the action of \(C\) on a homotopy class in \(\pi_* b\spin\) by chasing through the following steps:
 \begin{enumerate}
@@ -1071,15 +1071,15 @@ execute at end picture={
 & & & \widehat L_1 \gl_1 \S \arrow{rr} & & \widehat L_1 Cj \arrow[very thick, "B'" near start]{dd} \arrow[very thick]{rr} & & \widehat L_1 b\spin \\
 \spin \arrow{rr}[description]{j} \arrow{rrdd} & & |[alias=glS]| \gl_1 \S \arrow{rr} \arrow{dd} \arrow{ru} \arrow{rrdd}[description]{\gl_1 \eta_{KO_p}} & & |[alias=Cj]| Cj \arrow{ru} \arrow{dd}[description]{B} \arrow[crossing over]{rr} & & b\spin \arrow[very thick]{ru} \arrow[crossing over]{rr} \arrow[bend left=20]{rrdd} & & b\gl_1 \S \arrow{dd} \\
 & & & & & \widehat L_1 \gl_1 KO_p \arrow[very thick]{rr} & & \Q \otimes \widehat L_1 \gl_1 KO_p \\
-& & \Susp^{-1} \Q/\Z \otimes \gl_1 KO_p \arrow{rr} & & |[alias=glKOp]| \gl_1 KO_p \arrow{ru} \arrow{rr} & & \Q \otimes \gl_1 KO_p \arrow[very thick]{ru} \arrow{rr} \arrow[densely dotted, leftarrow, crossing over, "C"' near end]{uu} & & \Q/\Z \otimes \gl_1 KO_p.
+& & \Susp^{-1} \Q/\S \otimes \gl_1 KO_p \arrow{rr} & & |[alias=glKOp]| \gl_1 KO_p \arrow{ru} \arrow{rr} & & \Q \otimes \gl_1 KO_p \arrow[very thick]{ru} \arrow{rr} \arrow[densely dotted, leftarrow, crossing over, "C"' near end]{uu} & & \Q/\S \otimes \gl_1 KO_p.
 \end{tikzcd}
 \caption{A diagram showing the interconnections among the main components of the \(p\)--primary part of the Ando--Hopkins--Rezk argument.}\label{MainAHRDiagram}
 \end{sidewaysfigure}
 
-Now, finally, the diagonal map \(b\spin \to \Q/\Z \otimes \gl_1 KO_p\) becomes relevant.  To check the commutativity of the triangle with \(C\), we need only compare the results of the composite on homotopy since the map \(C\) targets a rational spectrum and hence is determined its effect on homotopy.  The following invariance property makes this map accessible:
+Now, finally, the diagonal map \(b\spin \to \Q/\S \otimes \gl_1 KO_p\) becomes relevant.  To check the commutativity of the triangle with \(C\), we need only compare the results of the composite on homotopy since the map \(C\) targets a rational spectrum and hence is determined its effect on homotopy.  The following invariance property makes this map accessible:
 
 \begin{theorem}[{\cite[Proposition 3.15 and Corollary 3.16]{AHR}}]
-For any \(A_\infty\)--orientation \(\phi\co MU \to R\) of an \(A_\infty\)--ring spectrum \(R\), the denominators of the characteristic series associated to \(\Q \otimes \phi\) compute the behavior of the map \(\pi_* BU \to \Q / \Z \otimes GL_1 R\). \qed
+For any \(A_\infty\)--orientation \(\phi\co MU \to R\) of an \(A_\infty\)--ring spectrum \(R\), the denominators of the characteristic series associated to \(\Q \otimes \phi\) compute the behavior of the map \(\pi_* BU \to \Q / \S \otimes GL_1 R\). \qed
 \end{theorem}
 
 \begin{corollary}
@@ -1228,7 +1228,7 @@ execute at end picture={
 & & & \widehat L_1 \gl_1 \S \arrow{rr} & & \widehat L_1 Cj \arrow[very thick, "B''" near start]{dd} \arrow{lddd}[description]{B'} \arrow[very thick]{rr} & & \widehat L_1 b\mathit{string} \\
 \mathit{string} \arrow{rr}[description]{j} \arrow{rrdd} & & |[alias=glS]| \gl_1 \S \arrow{rr} \arrow{dd} \arrow{ru} \arrow{rrdd}[description]{\widehat L_1 \gl_1 \eta_{tmf}} & & |[alias=Cj]| Cj \arrow{ru} \arrow{dd}[description]{B} \arrow[crossing over]{rr} & & b\mathit{string} \arrow[very thick]{ru} \arrow[crossing over]{rr} \arrow[bend left=20, crossing over]{rrdd} & & b\gl_1 \S \arrow{dd} \\
 & & & & & \widehat L_1 \tmf \arrow[very thick]{rr} & & \Q \otimes \widehat L_1 \tmf \\
-& & \Susp^{-1} \Q/\Z \otimes \widehat L_1 \gl_1 \tmf \arrow{rr} & & |[alias=glKOp]| \widehat L_1 \gl_1 \tmf \arrow{ru}[description]{\ell_1} \arrow{rr} & & \Q \otimes \widehat L_1 \gl_1 \tmf \arrow[very thick]{ru}[description]{\ell_1} \arrow{rr} \arrow[densely dotted, leftarrow, crossing over, "C"' near end]{uu} & & \Q/\Z \otimes \widehat L_1 \gl_1 \tmf.
+& & \Susp^{-1} \Q/\S \otimes \widehat L_1 \gl_1 \tmf \arrow{rr} & & |[alias=glKOp]| \widehat L_1 \gl_1 \tmf \arrow{ru}[description]{\ell_1} \arrow{rr} & & \Q \otimes \widehat L_1 \gl_1 \tmf \arrow[very thick]{ru}[description]{\ell_1} \arrow{rr} \arrow[densely dotted, leftarrow, crossing over, "C"' near end]{uu} & & \Q/\S \otimes \widehat L_1 \gl_1 \tmf.
 \end{tikzcd}
 \caption{A diagram showing the interconnections among the main components of the \(\tmf\) variant of the Ando--Hopkins--Rezk argument.  The variant of this diagram with \(\widehat L_1 \gl_1 \tmf\) and \(\widehat L_1 \tmf\) everywhere replaced by \(\widehat L_1 \widehat L_2 \gl_1 \tmf\) and \(\widehat L_1 \widehat L_2 \tmf\) is also relevant.}\label{AHRDiagramForTMF}
 \end{sidewaysfigure}
