--- a/finite.tex
+++ b/finite.tex
@@ -145,7 +145,7 @@ HS \arrow[leftarrow]{r} \arrow[shift left=\baselineskip]{r} \arrow[shift right=\
 \right\},\]
 and note that an \(R\)--module \(M\) gives rise to a cosimplicial left--\(\mathcal D_{Hf}\)--module which we denote \(\mathcal D_{Hf}(HM)\).  The totalization of this cosimplicial module gives rise to an \(HR\)--module receiving a natural map from \(M\), and we can ask for an analogue of \Cref{OriginalFFDescent}.
 
-\begin{lemma}\label{DescentFromHFpToHZp}
+\begin{lemma}[{\cite[Proposition 2.14]{MNNDescent}}]\label{DescentFromHFpToHZp}
 For \(f\co \Z \to \F_p\) and \(M\) a connective complex of \(\Z\)--modules, the totalization \(\Tot \mathcal D_{Hf}(HM)\) recovers the \(p\)--completion of \(M\).\footnote{There is an important distinction between a \(p\)--complete module and a module over the \(p\)--completion.  For example, \(\Q_p\) has a (continuous!) \(\Z_p\)--module structure, but it is not \(p\)--complete: the identity \(\Q_p \otimes_{\Z_p} \Z_p / p^j = 0\) inhibits its reconstruction from the associated descent data.  This distinction is embedded in the formation of the derived category, but in turn this has its own wrinkles; see, for example, \cite[Appendix A]{HoveyStrickland} and \cite[Appendix A]{BarthelFrankland}.}
 \end{lemma}
 \begin{proof}[Proof sketch]
@@ -1274,7 +1274,7 @@ L_d X & \simeq (L_d \S) \sm X, &
 \end{align*}
 \end{lemma}
 \begin{proof}[Analogy to \(j_* \vdash j^*\)]
-The first formula stems from \(j\) an open inclusion, whose algebraic model is \(j^* M \simeq R \otimes M\).\footnote{Localizations which obey this formula are called ``smashing'', and they are quite interesting: the arithmetic localizations and \(L_d\) form a complete list of smashing localizations in \(\CatOf{Spectra}\)~\cite[7.5.6]{RavenelOrangeBook}, and smashing localizations (which are localizations at ring spectra) agree with their nilpotent completions~\cite{BousfieldLocalization}.  (This can also be taken as an explanation of our interest in continuous Morava \(E\)--theory: by working internally to \(\CatOf{Spectra}_\Gamma\), we are forcing \(\widehat L_\Gamma\) to become smashing.)  The smashing localization \(L_d\) is also particularly interesting: the Adams resolution of \(L_d \S\) is weakly equivalent to a finite resolution~\cite[8.2.4]{RavenelOrangeBook}, from which it follows that every \(E(d)\)--Adams resolution is weakly finite, and hence that there is a universal horizontal vanishing line in \(E(d)\)--Adams spectral sequences.  In turn, if the ambient prime \(p\) is very large compared to the height of \(\Gamma\), the sparsity of the degrees \(|v_j|\) couples to this universal vanishing line to show that the \(E(d)\)--Adams spectral sequence always collapses, so that the theory of \(E(d)\)--local spectra is perfectly captured by the context \(\context{E(d)}\)~\cite[4.4.2, 6.2.10]{RavenelOrangeBook}.  Higher categorical versions of this statement are now also known~\cite{BSS,Pstragowski}.}  The second formula can be compared to the inclusion \(j\) of the formal infinitesimal neighborhood of a closed subscheme, whose algebraic model is \(j^* M = \lim_j (R/I^j \otimes M)\).\footnote{In keeping with our discussion of continuous Morava \(E\)--theory, it is also possible to consider the object \(\{\left( M_0(v^I) \sm L_d X \right)\}_I\) itself as a pro-spectrum.  This is interesting to explore: Davis and Lawson have shown that setting \(X = \S\) gives an \(E_\infty\)--ring pro-spectrum~\cite{DavisLawson}, even though none of the individual objects are \(E_\infty\)--ring spectra themselves~\cite{MNN}.}
+The first formula stems from \(j\) an open inclusion, whose algebraic model is \(j^* M \simeq R \otimes M\).\footnote{Localizations which obey this formula are called ``smashing'', and they are quite interesting: the arithmetic localizations and \(L_d\) form a complete list of smashing localizations in \(\CatOf{Spectra}\)~\cite[7.5.6]{RavenelOrangeBook}, and smashing localizations (which are localizations at ring spectra) agree with their nilpotent completions~\cite{BousfieldLocalization}.  (This can also be taken as an explanation of our interest in continuous Morava \(E\)--theory: by working internally to \(\CatOf{Spectra}_\Gamma\), we are forcing \(\widehat L_\Gamma\) to become smashing.)  The smashing localization \(L_d\) is also particularly interesting: the Adams resolution of \(L_d \S\) is weakly equivalent to a finite resolution~\cite[8.2.4]{RavenelOrangeBook}, from which it follows that every \(E(d)\)--Adams resolution is weakly finite, and hence that there is a universal horizontal vanishing line in \(E(d)\)--Adams spectral sequences.  In turn, if the ambient prime \(p\) is very large compared to the height of \(\Gamma\), the sparsity of the degrees \(|v_j|\) couples to this universal vanishing line to show that the \(E(d)\)--Adams spectral sequence always collapses, so that the theory of \(E(d)\)--local spectra is perfectly captured by the context \(\context{E(d)}\)~\cite[4.4.2, 6.2.10]{RavenelOrangeBook}.  Higher categorical versions of this statement are now also known~\cite{BSS,Pstragowski}.}  The second formula can be compared to the inclusion \(j\) of the formal infinitesimal neighborhood of a closed subscheme, whose algebraic model is \(j^* M = \lim_j (R/I^j \otimes M)\).\footnote{In keeping with our discussion of continuous Morava \(E\)--theory, it is also possible to consider the object \(\{\left( M_0(v^I) \sm L_d X \right)\}_I\) itself as a pro-spectrum.  This is interesting to explore: Davis and Lawson have shown that setting \(X = \S\) gives an \(E_\infty\)--ring pro-spectrum~\cite{DavisLawson}, even though none of the individual objects are \(E_\infty\)--ring spectra themselves~\cite{MNNNilpotence}.}
 \end{proof}
 
 \begin{lemma}\label{StableMixedKthyCoopnsVanish}
