--- a/powerops.tex
+++ b/powerops.tex
@@ -1086,7 +1086,7 @@ For any \(A_\infty\)--orientation \(\phi\co MU \to R\) of an \(A_\infty\)--ring 
 The numbers \(t_{4k}\) describing the effect of \(C\) satisfy the congruences \[t_{4k} \equiv -\frac{B_k}{2k} \pmod{\Z}.\]
 \end{corollary}
 \begin{proof}[Proof sketch]
-The Todd orientation \(MU \to KU\) is known to be \(A_\infty\)~\cite[Theorem V.4.1]{EKMM}, and the characteristic series of the Todd orientation has coefficients \(B_k\).  The extra division by \(2\) is picked up by studying the map \(\pi_* B\SU \to \pi_* B\Spin\) and the map \(\pi_* KO \to \pi_* KU\).
+The Todd orientation \(MU \to KU\) is known to be \(A_\infty\)~\cite[Theorem V.4.1]{EKMM}, and the characteristic series of the Todd orientation has coefficients \(B_k / k\).  The extra division by \(2\) is picked up by studying the maps \(\pi_* B\SU \to \pi_* B\Spin\) and \(\pi_* KO \to \pi_* KU\).
 \end{proof}
 
 We have thus identified the legal fillers \(C\) as those sequences of rational numbers \(t_{4k}\) satisfying conditions:
