--- a/powerops.tex
+++ b/powerops.tex
@@ -1102,7 +1102,7 @@ We have identified three points where we want to understand the collection of st
 
 To begin, the continuous \(p\)--adic \(KU\)--homology \(KU^\vee KU\) can be computed to be \(KU^\vee KU = \CatOf{Spaces}(\Z_p^\times, \Z_p)\), the ring of \(\Z_p\)--valued functions\footnote{\emph{Functions}, not homomorphisms!} on \(\Z_p^\times\) which are continuous for the adic topologies on the domain and the target.  This comes out of the stable cooperations of \index{Landweber flat}Landweber flat homology theories discussed in \Cref{DefnChromaticHomologyThys}, where we showed that \(E_\Gamma\) has cooperations given by the ring of functions on the pro-\'etale group scheme \(\Aut \Gamma\).  For \(\Gamma = \G_m\), this group scheme \(\Aut \G_m\) is constant at \(\Z_p^\times\), so that \(KU^\vee KU\) is the ring of \(\Z_p\)--valued functions on \(\Z_p^\times\).  Turning to cohomology, it follows by the universal coefficient spectral sequence that \(KU^0 KU = \CatOf{Groups}(\CatOf{Spaces}(\Z_p^\times, \Z_p), \Z_p)\) and that \(KU^1 KU = 0\).  These correspondences behave as follows~\cite{AHRMoments}:
 \begin{enumerate}
-    \item The \index{Kronecker pairing}Kronecker pairing \[\S^0 \xrightarrow{c} KU \sm KU \xrightarrow{1 \sm f} KU \sm KU \xrightarrow{\mu} KU\] is computed by the evaluation pairing \[(c \in KU^\vee KU, f \in K^0 KU) \mapsto f(c).\]
+    \item The \index{Kronecker pairing}Kronecker pairing \[\S^0 \xrightarrow{c} KU \sm KU \xrightarrow{1 \sm f} KU \sm KU \xrightarrow{\mu} KU\] is computed by the evaluation pairing \[(c \in KU^\vee KU, f \in KU^0 KU) \mapsto f(c).\]
     \item The stable operation \(\psi^\lambda\) attached to \([\lambda] \in \Aut \G_m\) is evaluation at \(\lambda\).
     \item The stable cooperation \(v^{-k} \sm v^k \in \pi_0 KU \sm KU\) corresponds to the polynomial function \(x \mapsto x^k\), as justified by the computation \[\operatorname{ev}_{\lambda}(v^{-k} \sm v^k) = \frac{\psi^\lambda v^k}{v^k} = \frac{\lambda^k v^k}{v^k} = \lambda^k.\]
 \end{enumerate}
