fix missing numericity condition in kummer definition footnote

--- a/powerops.tex
+++ b/powerops.tex
@@ -1109,7 +1109,7 @@ To begin, the continuous \(p\)--adic \(KU\)--homology \(KU^\vee KU\) can be comp
 
 \noindent These last two facts mean that the behavior of a stable operation on homotopy is identical information to the values of a functional \(f\) on the standard polynomial functions \(x^k\).  We record this algebraic model as follows:
 \begin{lemma}\label{KOKummerLemma}
-For any \(N \ge 0\), the assignment \[\CatOf{Groups}(\CatOf{Spaces}(\Z_p^\times, \Z_p), \Z_p) \xrightarrow{(f(x \mapsto x^k))_k} \prod_{k \ge N} \Z_p\] is injective.  A sequence \((x_k)\) is said to be a \index{Kummer sequence@K\"ummer sequence}\textit{K\"ummer sequence} when it lies in this image.\footnote{A bit more explicitly: \((x_k)\) is K\"ummer when for all \(h(x) = \sum_{k=N}^n a_k x^k \in \Q[x]\) we have \(\sum_{k=N}^m a_k x_k \in \Z_p\).} \qed
+For any \(N \ge 0\), the assignment \[\CatOf{Groups}(\CatOf{Spaces}(\Z_p^\times, \Z_p), \Z_p) \xrightarrow{(f(x \mapsto x^k))_k} \prod_{k \ge N} \Z_p\] is injective.  A sequence \((x_k)\) is said to be a \index{Kummer sequence@K\"ummer sequence}\textit{K\"ummer sequence} when it lies in this image.\footnote{A bit more explicitly: \((x_k \in \Z_p)\) is K\"ummer when for all \(h(x) = \sum_{k=n}^N a_k x^k \in \Q[x]\) with $h(\Z_p^\times) \subseteq \Z_p$, we have \(\sum_{k=n}^N a_k x_k \in \Z_p\).} \qed
 \end{lemma}
 
 \begin{remark}
