fix flub in C^1 formula around 5.5.26

--- a/sigma.tex
+++ b/sigma.tex
@@ -1287,7 +1287,7 @@ MU[6, \infty) \arrow["\delta"]{r} \arrow["\sigma_{\Tate}"']{drrr} & M\SU \arrow[
 & & & KU\ps{q}.
 \end{tikzcd}
 \end{center}
-We will analyze this triangle by comparing \(\tilde\theta\) to the usual \(\MUP\)--orientation of \(KU\), which selects the coordinate \(f(u) = 1 - u\) on the formal completion of \(\Gm = \Spec \Z[u^\pm]\).  Appealing to \Cref{BUtoBUZ}, the induced \(MU\)--orientation \[MU \xrightarrow{\delta} \MUP \xrightarrow{\Td} KU\] sends \(f\) to the rigid section \(\delta f\) of \[\Theta^1 \sheaf I(0) = \sheaf I(0)_0 \otimes \sheaf I(0)^{-1} \cong \omega \otimes \sheaf I(0)\] given by \[\delta f = \frac{1}{1 - u} \left( - \frac{\mathrm{d}u}{u} \right).\]  The difference between \(\delta \Td\) and \(\delta \tilde\theta\) is expressed by an element \[\psi \in C^1(\widehat C_{\Tate}; \Gm),\] given explicitly by the quotient formula \[\psi = \left(\frac{\Td(1)}{\Td(u)}\right)^{-1} \cdot \frac{\tilde \theta_q(1)}{\tilde \theta_q(u)} = \prod_{n \ge 1} \frac{(1 - q^n)^2}{(1 - q^n u)(1 - q^n u^{-1})}.\]  This gives a re-expression of \(\delta \tilde\theta\) as the composite \[\delta \tilde\theta\co MU \xrightarrow{\eta_R} MU \sm MU \simeq MU \sm BU_+ \xrightarrow{\delta\Td \sm \psi} K_{\Tate},\] and hence its effect on a line bundle is determined by the evaluation of this \index{characteristic series}characteristic series: \[\psi(1 - \L) = \prod_{n \ge 1} \frac{(1 - q^n)^2}{(1 - q^n \L)(1 - q^n \L^{-1})}.\]  Its effect on vector bundles in general is determined by the \index{splitting principle}splitting principle and an exponential law, which after some computation~\cite[Section 2.7]{AHSTheoremOfTheCube} gives the generic formula \[\psi(\dim V \cdot 1 - V) = \bigotimes_{n \ge 1} \bigoplus_{j \ge 0} \Sym^j(\dim V \cdot 1 - V \otimes_{\R} \C) q^{jn} =: \bigotimes_{n \ge 1} \Sym_{q^n}(- \bar V_{\C}).\]  Finally, the map \((\eta_R)_*\co MU_* \to \pi_*(MU \sm \Susp^\infty_+ BU)\) sends a manifold \(M\) with stable normal bundle \(\nu\) to the pair \((M, \nu)\), so we at last compute
+We will analyze this triangle by comparing \(\tilde\theta\) to the usual \(\MUP\)--orientation of \(KU\), which selects the coordinate \(f(u) = 1 - u\) on the formal completion of \(\Gm = \Spec \Z[u^\pm]\).  Appealing to \Cref{BUtoBUZ}, the induced \(MU\)--orientation \[MU \xrightarrow{\delta} \MUP \xrightarrow{\Td} KU\] sends \(f\) to the rigid section \(\delta f\) of \[\Theta^1 \sheaf I(0) = \sheaf I(0)_0 \otimes \sheaf I(0)^{-1} \cong \omega \otimes \sheaf I(0)\] given by \[\delta f = \frac{1}{1 - u} \left( - \frac{\mathrm{d}u}{u} \right).\]  The difference between \(\delta \Td\) and \(\delta \tilde\theta\) is expressed by an element \[\psi \in C^1(\widehat C_{\Tate}; \Gm),\] given explicitly by the quotient formula \[\psi = \left(\frac{\Td'(1)}{\Td(u)}\right)^{-1} \cdot \frac{\tilde \theta_q'(1)}{\tilde \theta_q(u)} = \prod_{n \ge 1} \frac{(1 - q^n)^2}{(1 - q^n u)(1 - q^n u^{-1})}.\]  This gives a re-expression of \(\delta \tilde\theta\) as the composite \[\delta \tilde\theta\co MU \xrightarrow{\eta_R} MU \sm MU \simeq MU \sm BU_+ \xrightarrow{\delta\Td \sm \psi} K_{\Tate},\] and hence its effect on a line bundle is determined by the evaluation of this \index{characteristic series}characteristic series: \[\psi(1 - \L) = \prod_{n \ge 1} \frac{(1 - q^n)^2}{(1 - q^n \L)(1 - q^n \L^{-1})}.\]  Its effect on vector bundles in general is determined by the \index{splitting principle}splitting principle and an exponential law, which after some computation~\cite[Section 2.7]{AHSTheoremOfTheCube} gives the generic formula \[\psi(\dim V \cdot 1 - V) = \bigotimes_{n \ge 1} \bigoplus_{j \ge 0} \Sym^j(\dim V \cdot 1 - V \otimes_{\R} \C) q^{jn} =: \bigotimes_{n \ge 1} \Sym_{q^n}(- \bar V_{\C}).\]  Finally, the map \((\eta_R)_*\co MU_* \to \pi_*(MU \sm \Susp^\infty_+ BU)\) sends a manifold \(M\) with stable normal bundle \(\nu\) to the pair \((M, \nu)\), so we at last compute
 \begin{align*}
 \sigma_{\Tate}(M \in \pi_{2n} MU[6, \infty)) & = (\delta \Td \sm \theta')(M, \nu) \\
 & =: \Td\left(M; \bigotimes_{n \ge 1} \Sym_{q^n}(\bar \tau_{\C}) \right).
