keep variable names

--- a/sigma.tex
+++ b/sigma.tex
@@ -652,7 +652,7 @@ By design, the map \(e\) participates in a commuting square with \[\Spec E_0 BU[
 For \(\G\) a connected \(p\)--divisible group of dimension \(1\), the map \(\delta\co C^2(\G; \Gm) \to C^3(\G; \Gm)\) is injective.
 \end{lemma}
 \begin{proof}
-Being finite height means that the multiplication-by-\(p\) map of \(\G\) is fppf--surjective.  The kernel of \(\delta\) consists of symmetric, biexponential maps \(\G^{\times 2} \to \Gm\).\footnote{The condition \(f \in \ker \delta\) gives \(f(x, y+z) = f(x, y)f(x, z)\), so that the \(kU^0\)--linearity condition becomes redundant: \[\frac{f(x, y) f(t, x+y)}{f(t+x, y) f(t, x)} = \frac{f(x, y) [f(t, x) f(t, y)]}{[f(t, y) f(x, y)] f(t, x)} = 1.\]}  By restricting such a map \(f\) to \[f \co \G[p^j] \times \G \to \Gm,\] we can calculate \[f(x, p^j y) = f(p^j x, y) = f(0, y) = 1.\]  But since \(p^j\) is surjective on \(\G\), every point on the right-hand side can be so written (after perhaps passing to a flat cover of the base), so at every left-hand stage the map is trivial.  Finally, \(\G = \colim_j \G[p^j]\), so this filtration is exhaustive and we conclude that the kernel is trivial.
+Being finite height means that the multiplication-by-\(p\) map of \(\G\) is fppf--surjective.  The kernel of \(\delta\) consists of symmetric, biexponential maps \(\G^{\times 2} \to \Gm\).\footnote{The condition \(f \in \ker \delta\) gives \(f(t, x+y) = f(t, x) f(t, y)\), so that the \(kU^0\)--linearity condition becomes redundant: \[\frac{f(x, y) f(t, x+y)}{f(t+x, y) f(t, x)} = \frac{f(x, y) [f(t, x) f(t, y)]}{[f(t, y) f(x, y)] f(t, x)} = 1.\]}  By restricting such a map \(f\) to \[f \co \G[p^j] \times \G \to \Gm,\] we can calculate \[f(x, p^j y) = f(p^j x, y) = f(0, y) = 1.\]  But since \(p^j\) is surjective on \(\G\), every point on the right-hand side can be so written (after perhaps passing to a flat cover of the base), so at every left-hand stage the map is trivial.  Finally, \(\G = \colim_j \G[p^j]\), so this filtration is exhaustive and we conclude that the kernel is trivial.
 \end{proof}
 
 \begin{lemma}[{\cite[Lemma 7.3]{AndoStrickland}}]
@@ -1007,7 +1007,7 @@ There is a second standard embedding of a complex elliptic curve into projective
 \end{figure}
 
 \begin{definition}
-The basic \(\theta\)--function associated to \(E_\Lambda\) is defined by \[\theta_q(u) = \prod_{m \ge 1} (1 - q^m) (1 + q^{m-\frac{1}{2}}u) (1 + q^{m-\frac{1}{2}}u^{-1}) = \sum_{n \in \Z} u^n q^{\frac{1}{2} n^2}.\]  Given two rational numbers \(0 \le a, b \le 1\), we can also shift the zero-set of \(\theta_q\) in the \(1\) and \(q\) directions by the fractions \(a\) and \(b\), giving translated \(\theta\)--functions: \[\theta_q^{a,b}(u) = \left(q^{\frac{a^2}{2}} \cdot u^a \cdot \exp(2 \pi i a b) \right) \cdot \theta_q(u q^a \exp(2 \pi i b)).\]
+The basic \(\theta\)--function associated to \(E_\Lambda\) is defined by \[\theta_q(u) = \prod_{m \ge 1} (1 - q^m) \left(1 + q^{m-\frac{1}{2}}u\right) \left(1 + q^{m-\frac{1}{2}}u^{-1}\right) = \sum_{n \in \Z} u^n q^{\frac{1}{2} n^2}.\]  Given two rational numbers \(0 \le a, b \le 1\), we can also shift the zero-set of \(\theta_q\) in the \(1\) and \(q\) directions by the fractions \(a\) and \(b\), giving translated \(\theta\)--functions: \[\theta_q^{a,b}(u) = \left(q^{\frac{a^2}{2}} \cdot u^a \cdot \exp(2 \pi i a b) \right) \cdot \theta_q(u q^a \exp(2 \pi i b)).\]
 \end{definition}
 
 The basic \(\theta\)--function vanishes on the set \(\{\exp(2 \pi i (\frac{1}{2}m + \frac{\tau}{2}n))\}\), i.e., at the center of the fundamental annulus.  Since it has no poles, it cannot descend to give a function on \(\C^\times / q^{\Z}\), and its failure to descend is witnessed by its imperfect periodicity relation:\footnote{Equivalently, \(\theta_q\) is properly considered as a section of a nontrivial line bundle on this quotient.} \[\theta_q(qu) = u^{-1} q^{\frac{-1}{2}} \theta_q(u).\]
