--- a/main.bib
+++ b/main.bib
@@ -2642,6 +2642,24 @@ MRREVIEWER = {Keith Peter Johnson},
 MRREVIEWER = {Birgit Richter},
 }
 
+@book {LMS,
+    AUTHOR = {Lewis, Jr., L. G. and May, J. P. and Steinberger, M. and
+              McClure, J. E.},
+     TITLE = {Equivariant stable homotopy theory},
+    SERIES = {Lecture Notes in Mathematics},
+    VOLUME = {1213},
+      NOTE = {With contributions by J. E. McClure},
+ PUBLISHER = {Springer-Verlag, Berlin},
+      YEAR = {1986},
+     PAGES = {x+538},
+      ISBN = {3-540-16820-6},
+   MRCLASS = {55-02 (55Nxx 55Pxx 57S99)},
+  MRNUMBER = {866482},
+MRREVIEWER = {T. tom Dieck},
+       DOI = {10.1007/BFb0075778},
+       URL = {https://doi.org/10.1007/BFb0075778},
+}
+
 @article {Lin,
     AUTHOR = {Lin, Wen Hsiung},
      TITLE = {On conjectures of {M}ahowald, {S}egal and {S}ullivan},
