restore page geometry

--- a/preamble.tex
+++ b/preamble.tex
@@ -2,8 +2,8 @@
 
 % \usepackage{showframe}
 % turn these off if you ever resubmit to CUP
-% \usepackage{geometry}
-% \geometry{paperwidth=6in,paperheight=9in}
+\usepackage{geometry}
+\geometry{paperwidth=6in,paperheight=9in}
 
 
 %%% Created by texsupport 20/09/2017
@@ -415,17 +415,18 @@
 
 \usepackage{afterpage}
 \def\afterrectopage#1{{\ifodd\thepage#1\else\afterpage{#1}\fi}}
+% \def\afterrectopage#1{#1}
 
 % from hood chatham: an \intertext command that works in tikzcd
 
 % \usepackage{geometry}
 \makeatletter
-\edef\Gm@rmargin{\the\dimexpr1in + \hoffset + \oddsidemargin}
+\edef\Gm@rmargin{\the\dimexpr1in + \hoffset + \evensidemargin}
 \edef\Gm@lmargin{\the\dimexpr1in + \hoffset + \oddsidemargin}
 \makeatother
 \input{tikzcdintertext}
 
-% from hood chatham: 
+% from hood chatham:
 
 \input{sumfgl}
 
@@ -511,5 +512,3 @@
 \def\footnoterule{\kern-3\p@
   \hrule \@width 4nc \kern 2.6\p@} % the \hrule is .4pt high
 \makeatother
-
-
