--- a/cooperations.tex
+++ b/cooperations.tex
@@ -160,7 +160,11 @@ Hence, the spectral sequence collapses.  To see that there are no multiplicative
 
 \begin{corollary}\label{CalculationOfUnstableSteenrodHopfRing}
 There is an isomorphism
-\[\HFtwo_* \OS{\HFtwo}{*} \cong \bigotimes_q \frac{\F_2[\alpha_{(j_1)} \circ \cdots \circ \alpha_{(j_q)} \mid j_1 \le \cdots \le j_q]}{(\alpha_{(j_1)} \circ \cdots \circ \alpha_{(j_q)})^{\ast 2}} \cong \bigotimes_q (\HFtwo_* \RP^\infty)^{\sm q},\] where \((\HFtwo_* \RP^\infty)^{\sm q}\) denotes the \(q\){\th} exterior power of \(\HFtwo_* \RP^\infty\) as a Hopf algebra~\cite[Propposition 5.5]{GoerssDieudonne}. \qed
+\begin{align*}
+\HFtwo_* \OS{\HFtwo}{*} & \cong \bigotimes_q \frac{\F_2[\alpha_{(j_1)} \circ \cdots \circ \alpha_{(j_q)} \mid j_1 \le \cdots \le j_q]}{(\alpha_{(j_1)} \circ \cdots \circ \alpha_{(j_q)})^{\ast 2}} \\
+& \cong \bigotimes_q (\HFtwo_* \RP^\infty)^{\sm q},
+\end{align*}
+where \((\HFtwo_* \RP^\infty)^{\sm q}\) denotes the \(q\){\th} exterior power of \(\HFtwo_* \RP^\infty\) as a Hopf algebra~\cite[Propposition 5.5]{GoerssDieudonne}. \qed
 \end{corollary}
 
 \begin{remark}[{\cite[Theorems 8.5 and 8.11]{Wilson}}]
