--- a/sigma.tex
+++ b/sigma.tex
@@ -1182,7 +1182,7 @@ In the case that \(A\) is an elliptic curve, this agrees with the usual definiti
 We now actually leverage this arithmetic geometry by placing ourselves in a situation where algebraic topology is directly linked to abelian varieties.
 
 \begin{definition}\label{DefnEllipticSpectrum}
-An \index{elliptic spectrum}\textit{elliptic spectrum} consists of a even--periodic ring spectrum \(E\), an elliptic curve \(C\) over \(\Spec E_0\), and a choice of isomorphism \[\phi\co C^\wedge_0 \xrightarrow{\cong} \CP^\infty_E.\]  A map of elliptic spectra consists of a map of ring spectra \(f\co E \to E'\) and an isomorphism of elliptic curves \(\psi\co f^* C \to C'\) compatible with \(\phi_E\) and \(\phi_{E'}\).\footnote{Elliptic curves and cohomology theories can be brought much closer together still, as in Lurie's framework~\cite[Sections 4 and 5.3]{LurieSurveyOfEll}.}
+An \index{elliptic spectrum}\textit{elliptic spectrum} consists of an even--periodic ring spectrum \(E\), an elliptic curve \(C\) over \(\Spec E_0\), and a choice of isomorphism \[\phi\co C^\wedge_0 \xrightarrow{\cong} \CP^\infty_E.\]  A map of elliptic spectra consists of a map of ring spectra \(f\co E \to E'\) and an isomorphism of elliptic curves \(\psi\co f^* C \to C'\) compatible with \(\phi_E\) and \(\phi_{E'}\).\footnote{Elliptic curves and cohomology theories can be brought much closer together still, as in Lurie's framework~\cite[Sections 4 and 5.3]{LurieSurveyOfEll}.}
 \end{definition}
 
 \begin{remark}
