--- a/cooperations.tex
+++ b/cooperations.tex
@@ -729,7 +729,7 @@ It is possible to read off several invariants of the formal group via its Dieudo
 \end{remark}
 
 \begin{example}
-Using \Cref{InvariantsFromDModule}, we see that the Dieudonn\'e module associated to a formal group \(\Gamma\) of height \(1\) must take the form \[D^*(\Gamma) = \left. \W_p(k)\{x\} \middle/ \left( \begin{array}{c} Fx = p (u^{-1})^\phi x^\phi \\ Vx = u x^{-\phi} \end{array} \right)\right.\] for a constant \(u\), referred to as the \textit{modulus}~(cf.\ \cite[Theorem 4.2.2]{MoravaFormsOfKthy}).  In the case of \(\Gamma = \G_m\), this constant is simply \(u = 1\), owing essentially to the formula \([p](x) = x^p\) for the standard coordinate on the multiplicative formal group.
+Using \Cref{InvariantsFromDModule}, we see that the Dieudonn\'e module associated to a formal group \(\Gamma\) of height \(1\) must take the form \[D^*(\Gamma) = \left. \W_p(k)\{\omega\} \middle/ \left( \begin{array}{c} F\omega = p (u^{-1})^\phi \omega^\phi \\ V\omega = u \omega^{-\phi} \end{array} \right)\right.\] for a constant \(u\), referred to as the \textit{modulus}~(cf.\ \cite[Theorem 4.2.2]{MoravaFormsOfKthy}).  In the case of \(\Gamma = \G_m\), this constant is \(u = 1\), owing essentially to the formula \([p](x) = x^p\) for the standard coordinate on the multiplicative formal group.
 \end{example}
 
 \begin{example}
