more notational repairs in the vein of #109

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -733,16 +733,16 @@ Using \Cref{InvariantsFromDModule}, we see that the Dieudonn\'e module associate
 \end{example}
 
 \begin{example}
-We also give a kind of non-example: \(\G_a\) is \emph{not} a finite height formal group, and its Dieudonn\'e module is correspondingly strangely behaved: \[D^*(\G_a) = k\ps{F}\{x\} / (V = 0).\]
+We also give a kind of non-example: \(\G_a\) is \emph{not} a finite height formal group, and its Dieudonn\'e module is correspondingly strangely behaved: \[D^*(\G_a) = k\ps{F}\{\omega\} / (V = 0).\]
 \end{example}
 
 \begin{example}[{cf.\ \Cref{Alpha2Example}}]\label{WorkedAlpha2Example}
-Dieudonn\'e theory admits an extension to finite group schemes over \(k\) as well, and the appropriate quotient of the Dieudonn\'e module of a formal group agrees with the Dieudonn\'e module associated to the appropriate subscheme: \[D^*(\mu_p) := D^*(\G_0[p^j]) = D^*(\G_0) / p^j.\]  For example, this gives \[D^*(\G_m[p]) = \left.k\{x\} \middle/\left(\begin{array}{c} F(cx) = 0, \\ V(cx) = c^{-\phi} x \end{array}\right)\right. .\]  More exotically, we can extract the finite quotient module \(D^*(\alpha_p)\) of the Dieudonn\'e module associated to \(\G_a\) above as \[D^*(\alpha_p) = \F_p\{x\} \leftarrow D^*(\G_a).\]  Specializing to $k = \F_2$, we can now verify the four claims from \Cref{Alpha2Example}:
+Dieudonn\'e theory admits an extension to finite group schemes over \(k\) as well, and the appropriate quotient of the Dieudonn\'e module of a formal group agrees with the Dieudonn\'e module associated to the appropriate subscheme: \[D^*(\mu_p) := D^*(\G_0[p^j]) = D^*(\G_0) / p^j.\]  For example, this gives \[D^*(\G_m[p]) = \left.k\{\omega\} \middle/\left(\begin{array}{c} F(c\omega) = 0, \\ V(c\omega) = c^{-\phi} \omega \end{array}\right)\right. .\]  More exotically, we can extract the finite quotient module \(D^*(\alpha_p)\) of the Dieudonn\'e module associated to \(\G_a\) above as \[D^*(\alpha_p) = \F_p\{\omega\} \leftarrow D^*(\G_a).\]  Specializing to $k = \F_2$, we can now verify the four claims from \Cref{Alpha2Example}:
 \begin{itemize}
 \item \textit{The group scheme \(\alpha_2\) has the same underlying structure ring as \(\mu_2 = \mathbb{G}_m[2]\) but is not isomorphic to it.}  There are now several ways to see this, the simplest of which is that the Verschiebung operator acts nontrivially on \(D^*(\mu_2)\) but wholly trivially on \(D^*(\alpha_2)\).\footnote{See also~\cite[Example 8.5]{StricklandFPFP}.}
-\item \textit{There is no commutative group scheme \(G\) of rank four such that \(\alpha_2 = G[2]\).}  Suppose that \(G\) were such a group scheme, so that \(D^*(G) / 2\) would give \(D^*(\alpha_2)\).  It can't be the case that \(D^*(G)\) has only \(2\)--torsion, since then this quotient would be a null operation, so it must be the case that \(D^*(G) = \Z/4\{x\}\).  The action of both \(F\) and \(V\) on \(x\) must vanish after quotienting by \(2\), so it must be the case that \(Fx = 2cx\) and \(Vx = 2dx\) for some constants \(c\) and \(d\)---but this violates \(VFx = 2x\).
-\item \textit{If \(E/\mathbb{F}_2\) is the supersingular elliptic curve, then there is a short exact sequence \[0 \rightarrow \alpha_2 \rightarrow E[2] \rightarrow \alpha_2 \rightarrow 0.\]  However, this short exact sequence doesn't split (even after making a base change).}  One definition of \textit{supersingular} is that \(\widehat E\) is a formal group of height \(2\).  The claim then follows from calculating the action of \(F\) and \(V\) to get a short exact sequence of Dieudonn\'e modules: \[0 \to \F_2\{Fx\}/(F, V) \to \left.\F_2\{x, Fx\} \middle/ \left( \begin{array}{c} F^2x = 0, \\ V = 0 \end{array}\right) \right. \to \F_2\{x\}/(F, V) \to 0.\]  The exact sequence is split as \(\F_2\)--modules, but not as Dieudonn\'e modules.
-\item \textit{The subgroups of \(\alpha_2 \times \alpha_2\) of rank two are parameterized by \(\mathbb{P}^1\).}  The Dieudonn\'e module of the product is quickly computed: \[D^*(\alpha_2 \times \alpha_2) = D^*(\alpha_2) \oplus D^*(\alpha_2) = \left.\F_2\{x_1, x_2\} \middle/ \left( \begin{array}{c} F = 0, \\ V = 0 \end{array} \right) \right. .\]  An inclusion of a rank \(2\) subgroup scheme corresponds to a projection of this Dieudonn\'e module onto a \(1\)--dimensional quotient module, and the ways to choose the kernel of this projection encompass a \(\P^1\).
+\item \textit{There is no commutative group scheme \(G\) of rank four such that \(\alpha_2 = G[2]\).}  Suppose that \(G\) were such a group scheme, so that \(D^*(G) / 2\) would give \(D^*(\alpha_2)\).  It can't be the case that \(D^*(G)\) has only \(2\)--torsion, since then this quotient would be a null operation, so it must be the case that \(D^*(G) = \Z/4\{\omega\}\).  The action of both \(F\) and \(V\) on \(\omega\) must vanish after quotienting by \(2\), so it must be the case that \(F\omega = 2c\omega\) and \(V\omega = 2d\omega\) for some constants \(c\) and \(d\)---but this violates \(VF\omega = 2\omega\).
+\item \textit{If \(E/\mathbb{F}_2\) is the supersingular elliptic curve, then there is a short exact sequence \[0 \rightarrow \alpha_2 \rightarrow E[2] \rightarrow \alpha_2 \rightarrow 0.\]  However, this short exact sequence doesn't split (even after making a base change).}  One definition of \textit{supersingular} is that \(\widehat E\) is a formal group of height \(2\).  The claim then follows from calculating the action of \(F\) and \(V\) to get a short exact sequence of Dieudonn\'e modules: \[0 \to \F_2\{F\omega\}/(F, V) \to \left.\F_2\{\omega, F\omega\} \middle/ \left( \begin{array}{c} F^2 \omega= 0, \\ V = 0 \end{array}\right) \right. \to \F_2\{\omega\}/(F, V) \to 0.\]  The exact sequence is split as \(\F_2\)--modules, but not as Dieudonn\'e modules.
+\item \textit{The subgroups of \(\alpha_2 \times \alpha_2\) of rank two are parameterized by \(\mathbb{P}^1\).}  The Dieudonn\'e module of the product is quickly computed: \[D^*(\alpha_2 \times \alpha_2) = D^*(\alpha_2) \oplus D^*(\alpha_2) = \left.\F_2\{\omega_1, \omega_2\} \middle/ \left( \begin{array}{c} F = 0, \\ V = 0 \end{array} \right) \right. .\]  An inclusion of a rank \(2\) subgroup scheme corresponds to a projection of this Dieudonn\'e module onto a \(1\)--dimensional quotient module, and the ways to choose the kernel of this projection encompass a \(\P^1\).
 \end{itemize}
 \end{example}
 
